--- a/test.html
+++ b/test.html
@@ -67,7 +67,7 @@
     <script>
         // JSON data
         var jsonData = {
-    // Add Your Json Data Here 
+    // Add Your Json Data Here from the Pega Api Response
 };
 
         // Function to create HTML from JSON
